# tinygrad-rs

./: Cargo.toml  README.md
examples/: mnist.rs  mnist_conv.rs  mnist_linear.rs
src/: dataloader.rs  layers.rs  lib.rs  loss.rs  main.rs  mnist.rs  neural_net.rs  tensor.rs
src/datasets/: mod.rs
src/datasets/mnist_data/: mod.rs
src/layers/: linear.rs  mod.rs
src/neural_net/: mod.rs
src/nn/: layers.rs  loss.rs  mod.rs
src/tensor/: mod.rs  ops.rs  tensor_ref.rs
src/tensor/ops/: binary_ops.rs  mod.rs  processing_ops.rs  reduce_ops.rs  unary_ops.rs
src/tinygrad/: nn.rs
